- Update to Jakarta EE8 APIs for MP 4.0 (link:https://github.com/eclipse/microprofile-config/issues/469[469])
- Enable MicroProfile Config repo to be built with Java 11 (link:https://github.com/eclipse/microprofile-config/issues/555[555])
- TCK changes: (link:https://github.com/eclipse/microprofile-config/issues/563[563]) (link:https://github.com/eclipse/microprofile-config/issues/319[319])

[[release_notes_14]]
== Release Notes for MicroProfile Config 1.4

A full list of changes delivered in the 1.4 release can be found at link:https://github.com/eclipse/microprofile-config/milestone/7?closed=1[MicroProfile Config 1.4 Milestone].

=== API/SPI Changes

- Prevent incorrect caching of ConfigProviderResolver (link:https://github.com/eclipse/microprofile-config/issues/265[#265])
- ConfigProviderResolver classloading issues (link:https://github.com/eclipse/microprofile-config/issues/450[#450]) (link:https://github.com/eclipse/microprofile-config/issues/390[#390])
- Converter extends Serializable (link:https://github.com/eclipse/microprofile-config/issues/473[#473])

=== Spec Changes

- Change the priority of implicit converters (link:https://github.com/eclipse/microprofile-config/issues/383[#383])
- Clarify if @ConfigProperty injected values are bean passivating enabled (link:https://github.com/eclipse/microprofile-config/issues/404[#404])
- Add built-in converters for byte, short and char (link:https://github.com/eclipse/microprofile-config/issues/386[#386])


=== Other Changes

- Exclude EL api transitive dependency (link:https://github.com/eclipse/microprofile-config/issues/440[#440])
- Other minor spec wording or JavaDoc updates

[[release_notes_13]]
== Release Notes for MicroProfile Config 1.3

The following changes occurred in the 1.3 release, compared to 1.2

A full list of changes may be found on the link:https://github.com/eclipse/microprofile-config/milestone/4?closed=1[MicroProfile Config 1.3 Milestone]

=== API/SPI Changes

No API/SPI changes.
