@@ -267,9 +267,10 @@ public interface Config {
 
     /**
      * Return all of the currently registered {@linkplain ConfigSource configuration sources} for this configuration.
-     * The returned sources will be sorted by descending ordinal value and name, which can be iterated in a thread-safe
-     * manner.
-     *
+     * <p>
+     * The returned sources will be sorted by descending ordinal value and name, which can be iterated in a thread-safe 
+     * manner. The {@link java.lang.Iterable Iterable} contains a fixed number of {@linkplain ConfigSource configuration sources}, 
+     * determined at application start time, and the config sources themselves may be static or dynamic.
      * @return the configuration sources
      */
     Iterable<ConfigSource> getConfigSources();
