@@ -45,6 +45,7 @@ A full list of changes delivered in the 2.0 release can be found at link:https:/
 - Update to Jakarta EE8 APIs for MP 4.0 (link:https://github.com/eclipse/microprofile-config/issues/469[469])
 - Enable MicroProfile Config repo to be built with Java 11 (link:https://github.com/eclipse/microprofile-config/issues/555[555])
 - TCK changes: (link:https://github.com/eclipse/microprofile-config/issues/563[563]) (link:https://github.com/eclipse/microprofile-config/issues/319[319])
+- Spec clarification: (link:https://github.com/eclipse/microprofile-config/issues/371[371])
 
 [[release_notes_14]]
 == Release Notes for MicroProfile Config 1.4
